--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,7 +19,8 @@ Metrics/BlockLength:
   IgnoredMethods: ['describe']
   Max: 30
 
-
+Style/RedundantStringEscape:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
